--- a/Web/IOT/fragments/menu.html
+++ b/Web/IOT/fragments/menu.html
@@ -1,5 +1,9 @@
 <div class="nav-side-menu">
-  <div id="brandDiv" class="brand">IOT</div>
+  <div>
+    <img id="brandIcon" style="width:50px; height:30px; position:absolute; left:15;top:10;"  />
+    <div id="brandDiv" class="brand">IOT</div>
+  </div>
+
   <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
 
   <div class="menu-list">
@@ -15,8 +19,8 @@
       <li data-file="alarms.html">
         <i class="fa fa-bell-o fa-lg"></i>Alarmlar
       </li>
-      <li data-file="device_config.html">
-        <i class="fa fa-wrench fa-lg" id="menuDeviceConfigurations"></i>Cihaz Ayarları
+      <li data-file="device.html">
+        <i class="fa fa-wrench fa-lg" id="menuDeviceConfigurations"></i>Slave Cihazlar
       </li>
       <li data-file="users.html">
         <i id="menuUsers" class="fa fa-users fa-lg"></i> Kullanıcılar
